--- a/testPymeasure.ipynb
+++ b/testPymeasure.ipynb
@@ -10,25 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GPIB0::1::INSTR\n",
-      "ADC Corp.,R6240A,040300114,B00  \n",
-      "\n",
-      "GPIB0::6::INSTR\n",
-      "KEITHLEY INSTRUMENTS INC.,MODEL 2182A,1300416,C02  /A02  \n",
-      "\n",
-      "GPIB0::16::INSTR\n",
-      "Agilent Technologies,N5222A,MY51421769,A.10.00.00\n",
-      "\n",
-      "GPIB0::19::INSTR\n",
-      "Agilent Technologies, N5183A, MY50142013, A.01.87\n",
-      "\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'latesetPymeasure' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n latesetPymeasure ipykernel --update-deps --force-reinstall'"
      ]
     }
    ],
@@ -307,18 +299,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0747492003\n",
-      "0.0197252681\n",
-      "-3.44220162\n",
-      "-3.46836812\n",
-      "-3.49185287\n"
+      "1.9180398e-06\n",
+      "1.99684388e-06\n",
+      "2.03372016e-06\n",
+      "1.9867408e-06\n",
+      "1.99381296e-06\n"
      ]
     }
    ],
@@ -344,18 +336,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-3.6627471\n",
-      "-3.68914354\n",
-      "-3.71588763\n",
-      "-3.74053851\n",
-      "-3.76988154\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'agilent' from partially initialized module 'pymeasure.instruments' (most likely due to a circular import) (c:\\Users\\Ando_lab\\anaconda3\\envs\\pymeasure_env\\lib\\site-packages\\pymeasure\\instruments\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpymeasure\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39minstruments\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mkeithley\u001b[39;00m \u001b[39mimport\u001b[39;00m Keithley2182A\n\u001b[0;32m      2\u001b[0m nanovol_py \u001b[39m=\u001b[39m Keithley2182A(\u001b[39m\"\u001b[39m\u001b[39mGPIB::6\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m nanovol_py\u001b[39m.\u001b[39mset_filter(WIND\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\Ando_lab\\anaconda3\\envs\\pymeasure_env\\lib\\site-packages\\pymeasure\\instruments\\__init__.py:32\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m activetechnologies\n\u001b[0;32m     31\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m advantest\n\u001b[1;32m---> 32\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m agilent\n\u001b[0;32m     33\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m ametek\n\u001b[0;32m     34\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m ami\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'agilent' from partially initialized module 'pymeasure.instruments' (most likely due to a circular import) (c:\\Users\\Ando_lab\\anaconda3\\envs\\pymeasure_env\\lib\\site-packages\\pymeasure\\instruments\\__init__.py)"
      ]
     }
    ],
@@ -378,15 +371,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'latesetPymeasure' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n latesetPymeasure ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "from pymeasure.instruments.agilent import AgilentN5183A\n",
     "signalgenerator = AgilentN5183A('GPIB0::19')\n",
     "signalgenerator.initialize()\n",
     "signalgenerator.set_config()\n",
-    "signalgenerator.set_frequency(1)\n",
+    "signalgeneonrator.set_frequency(1)\n",
     "signalgenerator.set_power(0)\n",
     "signalgenerator.source_enabled(True)\n",
     "signalgenerator.source_enabled(False)\n",
@@ -485,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1991,7 +1995,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.15 ('pymeasure_env')",
+   "display_name": "latesetPymeasure",
    "language": "python",
    "name": "python3"
   },
@@ -2005,12 +2009,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.9.15 | packaged by conda-forge | (main, Nov 22 2022, 08:41:22) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5e02ae91a49ba5a96295d8b678469b61cdd7bb317a795f9c62396b939bb18a91"
+    "hash": "f42319ee9265ac68b04808eed1d0f3b45895f1abeebb86ea2ba199ac490e0fcc"
    }
   }
  },
