minor chnage.(adding comment in ASHE_netana_double.py)

--- a/testPymeasure.ipynb
+++ b/testPymeasure.ipynb
@@ -10,17 +10,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'latesetPymeasure' requires ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'conda install -n latesetPymeasure ipykernel --update-deps --force-reinstall'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPIB0::1::INSTR\n",
+      "ADC Corp.,R6240A,040300114,B00  \n",
+      "\n",
+      "GPIB0::6::INSTR\n",
+      "KEITHLEY INSTRUMENTS INC.,MODEL 2182A,1300416,C02  /A02  \n",
+      "\n",
+      "GPIB0::16::INSTR\n",
+      "Agilent Technologies,N5222A,MY51421769,A.10.00.00\n",
+      "\n",
+      "GPIB0::19::INSTR\n",
+      "Agilent Technologies, N5183A, MY50142013, A.01.87\n",
+      "\n"
      ]
     }
    ],
@@ -299,18 +307,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.9180398e-06\n",
-      "1.99684388e-06\n",
-      "2.03372016e-06\n",
-      "1.9867408e-06\n",
-      "1.99381296e-06\n"
+      "1.88166946e-06\n",
+      "1.94380347e-06\n",
+      "1.95037048e-06\n",
+      "2.02109212e-06\n",
+      "1.82610246e-06\n"
      ]
     }
    ],
@@ -336,25 +344,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'agilent' from partially initialized module 'pymeasure.instruments' (most likely due to a circular import) (c:\\Users\\Ando_lab\\anaconda3\\envs\\pymeasure_env\\lib\\site-packages\\pymeasure\\instruments\\__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpymeasure\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39minstruments\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mkeithley\u001b[39;00m \u001b[39mimport\u001b[39;00m Keithley2182A\n\u001b[0;32m      2\u001b[0m nanovol_py \u001b[39m=\u001b[39m Keithley2182A(\u001b[39m\"\u001b[39m\u001b[39mGPIB::6\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m nanovol_py\u001b[39m.\u001b[39mset_filter(WIND\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\Ando_lab\\anaconda3\\envs\\pymeasure_env\\lib\\site-packages\\pymeasure\\instruments\\__init__.py:32\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m activetechnologies\n\u001b[0;32m     31\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m advantest\n\u001b[1;32m---> 32\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m agilent\n\u001b[0;32m     33\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m ametek\n\u001b[0;32m     34\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m ami\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'agilent' from partially initialized module 'pymeasure.instruments' (most likely due to a circular import) (c:\\Users\\Ando_lab\\anaconda3\\envs\\pymeasure_env\\lib\\site-packages\\pymeasure\\instruments\\__init__.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.84631235e-06\n",
+      "1.90491037e-06\n",
+      "2.08019929e-06\n",
+      "1.87460105e-06\n",
+      "1.90187944e-06\n"
      ]
     }
    ],
    "source": [
     "from pymeasure.instruments.keithley import Keithley2182A\n",
     "nanovol_py = Keithley2182A(\"GPIB::6\")\n",
+    "nanovol.write('*RST')\n",
     "nanovol_py.set_filter(WIND=0)\n",
     "nanovol_py.set_rate(PLC=1)\n",
     "for i in range(0,5):\n",
@@ -489,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,18 +944,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "39"
-      ]
-     },
-     "execution_count": 330,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'SendAna' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtime\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m SendAna(\u001b[39m\"\u001b[39m\u001b[39mSYST:FPReset\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39m# preset\u001b[39;00m\n\u001b[0;32m      4\u001b[0m SendAna(\u001b[39m\"\u001b[39m\u001b[39mDISPlay:WINDow1:STATE ON\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m#turn on display\u001b[39;00m\n\u001b[0;32m      5\u001b[0m SendAna(\u001b[39m\"\u001b[39m\u001b[39mCALCulate1:PARameter:DEFine:EXT \u001b[39m\u001b[39m'\u001b[39m\u001b[39mMyMeas1\u001b[39m\u001b[39m'\u001b[39m\u001b[39m,S21\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m#Define masurement name and parameters\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'SendAna' is not defined"
+     ]
     }
    ],
    "source": [
@@ -963,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +981,7 @@
        "15"
       ]
      },
-     "execution_count": 331,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +994,7 @@
     "\n",
     "# SendAna(\"SENS1:FREQ:STAR 1e8\")#Start of frequency\n",
     "# SendAna(\"SENS1:FREQ:STOP 1e9\")#End of frequency\n",
-    "SendAna(\"SENS1:SWE:POIN 1000\")#Numebr of sweep points\n",
+    "SendAna(\"SENS1:SWE:POIN 10000\")#Numebr of sweep points\n",
     "SendAna(\"SOUR:POW1 5\") #power DB\n",
     "SendAna(\"SENSe1:BWID 1kHZ\")#band width\n",
     "\n",
@@ -1026,6 +1035,23 @@
     "# SendAna(\"INIT:IMM\")#ON?\n",
     "# SendAna(\"DISP:WIND1:TRAC:Y:SCAL:AUTO\") # Auto y scale of display \n",
     "time.sleep(10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pymeasure.instruments.agilent import AgilentN5222A\n",
+    "\n",
+    "netana = AgilentN5222A('GPIB::16')\n",
+    "netana.setup_SPARM(n=1,SPAR=\"S21\")\n",
+    "\n",
+    "netana.set_sweep(n=1,type=\"CW\",fCW=1e9,num=10000)\n",
+    "netana.set_power(n=1,P=10)\n",
+    "netana.set_autoYscale(n=1)\n",
+    "netana.set_average(n=1)"
    ]
   },
   {
@@ -2009,7 +2035,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 | packaged by conda-forge | (main, Nov 22 2022, 08:41:22) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
